Skript 2.10 prep